<resources>
    <string name="app_name">Tutorial04</string>
    <string name="userName">User Name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="selectAll">SELECT ALL</string>
    <string name="add">ADD</string>
    <string name="signIn">SIGN IN</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
</resources>
